@@ -46,6 +46,7 @@ VERSION 4.2.
 
 ?$pgv_lang["whatever"]								dd Monthname, year		Change	codes and comments
 ----------------------------------------------------------------------------------------
++$pgv_lang["facts"]									26 Jan 2009				A
 +$pgv_lang["show_stats_charts"]						25 Jan 2009				A
 +$pgv_lang["decade_birth"]							25 Jan 2009				A
 +$pgv_lang["decade_death"]							25 Jan 2009				A
